--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
     <head>
         <title>Hello World!</title>
     </head>
-    
+
+    <body>
+        <script src="app.js"></script>
+    </body>
 </html>
